feat: migrate responsive web design projects

--- a/package.json
+++ b/package.json
@@ -40,7 +40,11 @@
     "test:image-search-abstraction-layer": "node test-server-starts.js apps/image-search-abstraction-layer",
     "test:p2p-video-chat-application": "node test-server-starts.js apps/p2p-video-chat-application",
     "pretest:voting-app": "cd apps/voting-app && cp sample.env .env",
-    "test:voting-app": "node test-server-starts.js apps/voting-app"
+    "test:voting-app": "node test-server-starts.js apps/voting-app",
+    "test:tribute-page": "node test-server-starts.js apps/tribute-page",
+    "test:survey-form": "node test-server-starts.js apps/survey-form",
+    "test:product-landing-page": "node test-server-starts.js apps/product-landing-page",
+    "test:technical-documentation-page": "node test-server-starts.js apps/technical-documentation-page"
   },
   "devDependencies": {
     "concurrently": "7.0.0",
@@ -69,12 +73,17 @@
     "apps/metric-imperial-converter",
     "apps/p2p-video-chat-application",
     "apps/personal-library",
+    "apps/personal-portfolio",
+    "apps/product-landing-page",
     "apps/request-header-parser-microservice",
     "apps/secure-real-time-multiplayer-game",
     "apps/stock-price-checker",
     "apps/stock-price-checker-proxy",
     "apps/sudoku-solver",
+    "apps/survey-form",
+    "apps/technical-documentation-page",
     "apps/timestamp-microservice",
+    "apps/tribute-page",
     "apps/twitch-proxy",
     "apps/url-shortener-microservice",
     "apps/voting-app",
