fix: missed test scripts

--- a/apps/personal-portfolio/package.json
+++ b/apps/personal-portfolio/package.json
@@ -4,7 +4,8 @@
     "description": "Responsive Web Design project for freeCodeCamp",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node server.js",
+        "test": "wait-port -t 10000 3000"
     },
     "dependencies": {
         "dotenv": "^16.0.0",
