feat: Add Remaining Data Viz Projects (#318)
* add scatterplot graph

* adding heat-map

* adding choropleth map project

* adding treemap-diagram project

* update readme.md

* fix where to add config

* Update apps/choropleth-map/sample.env

Co-authored-by: Tom <20648924+moT01@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     "test:survey-form": "node test-server-starts.js apps/survey-form",
     "test:product-landing-page": "node test-server-starts.js apps/product-landing-page",
     "test:technical-documentation-page": "node test-server-starts.js apps/technical-documentation-page",
-    "test:bar-chart": "node test-server-starts.js apps/bar-chart"
+    "test:bar-chart": "node test-server-starts.js apps/bar-chart",
+    "test:scatterplot-graph": "node test-server-starts.js apps/scatterplot-graph",
+    "test:heat-map": "node test-server-starts.js apps/heat-map",
+    "test:choropleth-map": "node test-server-starts.js apps/choropleth-map",
+    "test:treemap-diagram": "node test-server-starts.js apps/treemap-diagram"
   },
   "devDependencies": {
     "concurrently": "7.4.0",
@@ -66,9 +70,11 @@
     "apps/bar-chart",
     "apps/build-a-pinterest-clone",
     "apps/chart-the-stock-market",
+    "apps/choropleth-map",
     "apps/exercise-tracker",
     "apps/file-metadata-microservice",
     "apps/forum-proxy",
+    "apps/heat-map",
     "apps/image-search-abstraction-layer",
     "apps/issue-tracker",
     "apps/manage-a-book-trading-club",
@@ -79,12 +85,14 @@
     "apps/product-landing-page",
     "apps/request-header-parser-microservice",
     "apps/secure-real-time-multiplayer-game",
+    "apps/scatterplot-graph",
     "apps/stock-price-checker",
     "apps/stock-price-checker-proxy",
     "apps/sudoku-solver",
     "apps/survey-form",
     "apps/technical-documentation-page",
     "apps/timestamp-microservice",
+    "apps/treemap-diagram",
     "apps/tribute-page",
     "apps/twitch-proxy",
     "apps/url-shortener-microservice",
