--- a/apps/markdown-previewer/package.json
+++ b/apps/markdown-previewer/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "parcel": "^2.7.0"
   }
 }
