--- a/apps/markdown-previewer/package.json
+++ b/apps/markdown-previewer/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "parcel build --out-dir=dist",
-    "test": "wait-port -t 10000 3000"
+    "test": "wait-port -t 10000 3000",
+    "build": "rollup -c",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "parcel": "^2.7.0"
+    "rollup": "^2.79.1"
   }
 }
