refactor: copy all sample.env files at once

--- a/package.json
+++ b/package.json
@@ -15,31 +15,29 @@
     "delete": "pm2 delete ecosystem.config.js",
     "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.mjs --no-autorestart --cron \"0 0 1 * *\" && npm run reload -- --only twitch-proxy",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
+    "pretest-local-or-ci": "node test/pretest.js",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:config": "jest --rootDir=test",
     "test:american-british-translator": "cd apps/american-british-translator && npm run test",
-    "test:anonymous-message-board": "cd apps/anonymous-message-board && cp sample.env .env && npm run test",
-    "test:exercise-tracker": "cd apps/exercise-tracker && cp sample.env .env && npm run test",
+    "test:anonymous-message-board": "cd apps/anonymous-message-board && npm run test",
+    "test:exercise-tracker": "cd apps/exercise-tracker && npm run test",
     "test:file-metadata-microservice": "cd apps/file-metadata-microservice && npm run test",
     "test:forum-proxy": "cd apps/forum-proxy && npm run test",
-    "test:issue-tracker": "cd apps/issue-tracker && cp sample.env .env && npm run test",
-    "test:manage-a-book-trading-club": "cd apps/manage-a-book-trading-club && cp sample.env .env && npm run test",
+    "test:issue-tracker": "cd apps/issue-tracker && npm run test",
+    "test:manage-a-book-trading-club": "cd apps/manage-a-book-trading-club && npm run test",
     "test:metric-imperial-converter": "cd apps/metric-imperial-converter && npm run test",
-    "test:personal-library": "cd apps/personal-library && cp sample.env .env && npm run test",
+    "test:personal-library": "cd apps/personal-library && npm run test",
     "test:request-header-parser-microservice": "cd apps/request-header-parser-microservice && npm run test",
     "test:secure-real-time-multiplayer-game": "cd apps/secure-real-time-multiplayer-game && npm run test",
-    "test:stock-price-checker": "cd apps/stock-price-checker && cp sample.env .env && npm run test",
+    "test:stock-price-checker": "cd apps/stock-price-checker && npm run test",
     "test:sudoku-solver": "cd apps/sudoku-solver && npm run test",
     "test:timestamp-microservice": "cd apps/timestamp-microservice && npm run test",
-    "test:url-shortener-microservice": "cd apps/url-shortener-microservice && cp sample.env .env && npm run test",
+    "test:url-shortener-microservice": "cd apps/url-shortener-microservice && npm run test",
     "__comment": "These don't currently have actual tests, but will assert the server starts.",
-    "pretest:build-a-pinterest-clone": "cd apps/build-a-pinterest-clone && cp sample.env .env",
     "test:build-a-pinterest-clone": "node test-server-starts.js apps/build-a-pinterest-clone",
     "test:chart-the-stock-market": "node test-server-starts.js apps/chart-the-stock-market",
-    "pretest:image-search-abstraction-layer": "cd apps/image-search-abstraction-layer && cp sample.env .env",
     "test:image-search-abstraction-layer": "node test-server-starts.js apps/image-search-abstraction-layer",
     "test:p2p-video-chat-application": "node test-server-starts.js apps/p2p-video-chat-application",
-    "pretest:voting-app": "cd apps/voting-app && cp sample.env .env",
     "test:voting-app": "node test-server-starts.js apps/voting-app",
     "test:tribute-page": "node test-server-starts.js apps/tribute-page",
     "test:survey-form": "node test-server-starts.js apps/survey-form",
