refactor: simplify test scripts

--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "pretest-local-or-ci": "node test/pretest.js",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:config": "jest --rootDir=test",
-    "test:american-british-translator": "cd apps/american-british-translator && npm run test",
-    "test:anonymous-message-board": "cd apps/anonymous-message-board && npm run test",
-    "test:exercise-tracker": "cd apps/exercise-tracker && npm run test",
-    "test:file-metadata-microservice": "cd apps/file-metadata-microservice && npm run test",
-    "test:forum-proxy": "cd apps/forum-proxy && npm run test",
-    "test:issue-tracker": "cd apps/issue-tracker && npm run test",
-    "test:manage-a-book-trading-club": "cd apps/manage-a-book-trading-club && npm run test",
-    "test:metric-imperial-converter": "cd apps/metric-imperial-converter && npm run test",
-    "test:personal-library": "cd apps/personal-library && npm run test",
-    "test:request-header-parser-microservice": "cd apps/request-header-parser-microservice && npm run test",
-    "test:secure-real-time-multiplayer-game": "cd apps/secure-real-time-multiplayer-game && npm run test",
-    "test:stock-price-checker": "cd apps/stock-price-checker && npm run test",
-    "test:sudoku-solver": "cd apps/sudoku-solver && npm run test",
-    "test:timestamp-microservice": "cd apps/timestamp-microservice && npm run test",
-    "test:url-shortener-microservice": "cd apps/url-shortener-microservice && npm run test",
+    "test:american-british-translator": "npm t -w=apps/american-british-translator",
+    "test:anonymous-message-board": "npm t -w=apps/anonymous-message-board",
+    "test:exercise-tracker": "npm t -w=apps/exercise-tracker",
+    "test:file-metadata-microservice": "npm t -w=apps/file-metadata-microservice",
+    "test:forum-proxy": "npm t -w=apps/forum-proxy",
+    "test:issue-tracker": "npm t -w=apps/issue-tracker",
+    "test:manage-a-book-trading-club": "npm t -w=apps/manage-a-book-trading-club",
+    "test:metric-imperial-converter": "npm t -w=apps/metric-imperial-converter",
+    "test:personal-library": "npm t -w=apps/personal-library",
+    "test:request-header-parser-microservice": "npm t -w=apps/request-header-parser-microservice",
+    "test:secure-real-time-multiplayer-game": "npm t -w=apps/secure-real-time-multiplayer-game",
+    "test:stock-price-checker": "npm t -w=apps/stock-price-checker",
+    "test:sudoku-solver": "npm t -w=apps/sudoku-solver",
+    "test:timestamp-microservice": "npm t -w=apps/timestamp-microservice",
+    "test:url-shortener-microservice": "npm t -w=apps/url-shortener-microservice",
     "__comment": "These don't currently have actual tests, but will assert the server starts.",
     "test:build-a-pinterest-clone": "node test-server-starts.js apps/build-a-pinterest-clone",
     "test:chart-the-stock-market": "node test-server-starts.js apps/chart-the-stock-market",
