--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "es2021": true,
     "browser": true,
     "mocha": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "globals": {
     "Promise": true,
@@ -13,11 +14,16 @@
     "jQuery": true,
     "router": true
   },
+  "plugins": ["jest"],
   "extends": ["eslint:recommended", "prettier"],
   "overrides": [
     {
-      "files": ["apps/secure-real-time-multiplayer-game/tests/1_unit-tests.js",
-      "apps/build-a-pinterest-clone/client/*", "**/rollup.config.js", "apps/p2p-video-chat-application/src/client.js"],
+      "files": [
+        "apps/secure-real-time-multiplayer-game/tests/1_unit-tests.js",
+        "apps/build-a-pinterest-clone/client/*",
+        "**/rollup.config.js",
+        "apps/p2p-video-chat-application/src/client.js"
+      ],
       "parserOptions": {
         "sourceType": "module"
       }
