--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "concurrently": "7.4.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-react": "7.31.8",
     "jest": "27.5.1",
     "npm-run-all": "4.1.5",
