--- a/package.json
+++ b/package.json
@@ -18,36 +18,8 @@
     "pretest-local-or-ci": "node test/pretest.js",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:config": "jest --rootDir=test",
-    "test:american-british-translator": "npm t -w=apps/american-british-translator",
-    "test:anonymous-message-board": "npm t -w=apps/anonymous-message-board",
-    "test:exercise-tracker": "npm t -w=apps/exercise-tracker",
-    "test:file-metadata-microservice": "npm t -w=apps/file-metadata-microservice",
-    "test:forum-proxy": "npm t -w=apps/forum-proxy",
-    "test:issue-tracker": "npm t -w=apps/issue-tracker",
-    "test:manage-a-book-trading-club": "npm t -w=apps/manage-a-book-trading-club",
-    "test:metric-imperial-converter": "npm t -w=apps/metric-imperial-converter",
-    "test:personal-library": "npm t -w=apps/personal-library",
-    "test:request-header-parser-microservice": "npm t -w=apps/request-header-parser-microservice",
-    "test:secure-real-time-multiplayer-game": "npm t -w=apps/secure-real-time-multiplayer-game",
-    "test:stock-price-checker": "npm t -w=apps/stock-price-checker",
-    "test:sudoku-solver": "npm t -w=apps/sudoku-solver",
-    "test:timestamp-microservice": "npm t -w=apps/timestamp-microservice",
-    "test:url-shortener-microservice": "npm t -w=apps/url-shortener-microservice",
-    "__comment": "These don't currently have actual tests, but will assert the server starts.",
-    "test:build-a-pinterest-clone": "node test-server-starts.js apps/build-a-pinterest-clone",
-    "test:chart-the-stock-market": "node test-server-starts.js apps/chart-the-stock-market",
-    "test:image-search-abstraction-layer": "node test-server-starts.js apps/image-search-abstraction-layer",
-    "test:p2p-video-chat-application": "node test-server-starts.js apps/p2p-video-chat-application",
-    "test:voting-app": "node test-server-starts.js apps/voting-app",
-    "test:tribute-page": "node test-server-starts.js apps/tribute-page",
-    "test:survey-form": "node test-server-starts.js apps/survey-form",
-    "test:product-landing-page": "node test-server-starts.js apps/product-landing-page",
-    "test:technical-documentation-page": "node test-server-starts.js apps/technical-documentation-page",
-    "test:bar-chart": "node test-server-starts.js apps/bar-chart",
-    "test:scatterplot-graph": "node test-server-starts.js apps/scatterplot-graph",
-    "test:heat-map": "node test-server-starts.js apps/heat-map",
-    "test:choropleth-map": "node test-server-starts.js apps/choropleth-map",
-    "test:treemap-diagram": "node test-server-starts.js apps/treemap-diagram"
+    "test:startup": "node test-server-starts.js",
+    "test:package-tests": "node test-packages.js"
   },
   "devDependencies": {
     "concurrently": "7.4.0",
