--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -2,7 +2,10 @@ name: Node.js CI
 on:
   pull_request:
     branches:
-      - master
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   ci:
