--- a/package.json
+++ b/package.json
@@ -49,7 +49,16 @@
     "test:scatterplot-graph": "node test-server-starts.js apps/scatterplot-graph",
     "test:heat-map": "node test-server-starts.js apps/heat-map",
     "test:choropleth-map": "node test-server-starts.js apps/choropleth-map",
-    "test:treemap-diagram": "node test-server-starts.js apps/treemap-diagram"
+    "test:treemap-diagram": "node test-server-starts.js apps/treemap-diagram",
+    "test:random-quote-machine": "node test-server-starts.js apps/random-quote-machine",
+    "pretest:markdown-previewer": "cd apps/markdown-previewer && cp sample.env .env",
+    "test:markdown-previewer": "node test-server-starts.js apps/markdown-previewer",
+    "pretest:drum-machine": "cd apps/drum-machine && cp sample.env .env",
+    "test:drum-machine": "node test-server-starts.js apps/drum-machine",
+    "pretest:javascript-calculator": "cd apps/javascript-calculator && cp sample.env .env",
+    "test:javascript-calculator": "node test-server-starts.js apps/javascript-calculator",
+    "pretest:25--5-clock": "cd apps/25--5-clock && cp sample.env .env",
+    "test:25--5-clock": "node test-server-starts.js apps/25--5-clock"
   },
   "devDependencies": {
     "concurrently": "7.4.0",
@@ -65,24 +74,29 @@
     "node-fetch": "3.2.10"
   },
   "workspaces": [
+    "apps/25--5-clock",
     "apps/american-british-translator",
     "apps/anonymous-message-board",
     "apps/bar-chart",
     "apps/build-a-pinterest-clone",
     "apps/chart-the-stock-market",
     "apps/choropleth-map",
+    "apps/drum-machine",
     "apps/exercise-tracker",
     "apps/file-metadata-microservice",
     "apps/forum-proxy",
     "apps/heat-map",
     "apps/image-search-abstraction-layer",
     "apps/issue-tracker",
+    "apps/javascript-calculator",
     "apps/manage-a-book-trading-club",
+    "apps/markdown-previewer",
     "apps/metric-imperial-converter",
     "apps/p2p-video-chat-application",
     "apps/personal-library",
     "apps/personal-portfolio",
     "apps/product-landing-page",
+    "apps/random-quote-machine",
     "apps/request-header-parser-microservice",
     "apps/secure-real-time-multiplayer-game",
     "apps/scatterplot-graph",
