feat: get most Dockerized projects working

--- a/apps/build-a-pinterest-clone/sample.env
+++ b/apps/build-a-pinterest-clone/sample.env
@@ -1,5 +1,6 @@
 GITHUB_KEY="foo"
 GITHUB_SECRET="bar"
 DB_URI="mongodb://localhost:27017/pinterest"
-APP_URL=
-NODE_ENV=
+APP_URL=http://localhost:3000
+NODE_ENV=DEV
+PORT=3000
