--- a/apps/voting-app/sample.env
+++ b/apps/voting-app/sample.env
@@ -1,5 +1,5 @@
 # In order to get the database connection to work, I had to set the node env to 2.2.12 or later on mongo atlas, see link:
 # https://stackoverflow.com/questions/49101567/mongodb-atlas-not-authorized-on-admin-to-execute-command/57182045#57182045
 
-PORT=
+PORT=3000
 MONGO_URI="mongodb://localhost:27017/voting-app"
