--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,214 +3,275 @@ services:
   # 25--5-clock:
   #   build:
   #     context: ./apps/25--5-clock
-  #   # env_file: ./apps/25--5-clock/.env
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
-  #   # volumes:
-  #   #   - .:/app/
-  #   #   - /app/node_modules
   #   ports:
-  #     - 50005:50005
+  #     - 50005:3000
 
   american-british-translator:
-    build: ./apps/american-british-translator
+    build:
+      context: ./apps/american-british-translator
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50010:3000
 
   # # Database
   # anonymous-message-board:
-  #   build: ./apps/anonymous-message-board
+  #   build:
+  #       context: ./apps/anonymous-message-board
+  #       dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50020:3000
 
   bar-chart:
-    build: ./apps/bar-chart
+    build:
+      context: ./apps/bar-chart
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50025:3000
 
   # # Rollup issue
   # build-a-pinterest-clone:
-  #   build: ./apps/build-a-pinterest-clone
+  #   build:
+  #     context: ./apps/build-a-pinterest-clone
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50030:3000
 
   # Alpha Vantage API key
   chart-the-stock-market:
-    build: ./apps/chart-the-stock-market
+    build:
+      context: ./apps/chart-the-stock-market
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50035:3000
 
   choropleth-map:
-    build: ./apps/choropleth-map
+    build:
+      context: ./apps/choropleth-map
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50037:3000
 
   # # Rollup issue
   # drum-machine:
-  #   build: ./apps/drum-machine
+  #   build:
+  #     context: ./apps/drum-machine
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50038:3000
 
   # # Database
   # exercise-tracker:
-  #   build: ./apps/exercise-tracker
+  #   build:
+  #     context: ./apps/exercise-tracker
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50040:3000
 
-  file-metadata-microservice:
-    build: ./apps/file-metadata-microservice
-    command: npm start
-    ports:
-      - 50050:3000
+  # file-metadata-microservice:
+  #   build:
+  #     context: ./apps/file-metadata-microservice
+  #     dockerfile: ../../Dockerfile
+  #   command: npm start
+  #   ports:
+  #     - 50050:3000
 
   forum-proxy:
-    build: ./apps/forum-proxy
+    build:
+      context: ./apps/forum-proxy
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50060:3000
 
   heat-map:
-    build: ./apps/heat-map
+    build:
+      context: ./apps/heat-map
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50064:3000
 
   # # Database, Google Image keys
   # image-search-abstraction-layer:
-  #   build: ./apps/image-search-abstraction-layer
+  #   build:
+  #     context: ./apps/image-search-abstraction-layer
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50065:3000
 
   # # Database
   # issue-tracker:
-  #   build: ./apps/issue-tracker
+  #   build:
+  #     context: ./apps/issue-tracker
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50070:3000
 
   # # Rollup issue
   # javascript-calculator:
-  #   build: ./apps/javascript-calculator
+  #   build:
+  #     context: ./apps/javascript-calculator
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50075:3000
 
   # # Database, GitHub secrets, Google secrets
   # manage-a-book-trading-club:
-  #   build: ./apps/manage-a-book-trading-club
+  #   build:
+  #     context: ./apps/manage-a-book-trading-club
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50200:3000
 
   metric-imperial-converter:
-    build: ./apps/metric-imperial-converter
+    build:
+      context: ./apps/metric-imperial-converter
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50090:3000
 
   # # Rollup issue
   # p2p-video-chat-application:
-  #   build: ./apps/p2p-video-chat-application
+  #   build:
+  #     context: ./apps/p2p-video-chat-application
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50100:3000
 
   # # Database
   # personal-library:
-  #   build: ./apps/personal-library
+  #   build:
+  #     context: ./apps/personal-library
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50210:3000
 
   personal-portfolio:
-    build: ./apps/personal-portfolio
+    build:
+      context: ./apps/personal-portfolio
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50260:3000
 
   product-landing-page:
-    build: ./apps/product-landing-page
+    build:
+      context: ./apps/product-landing-page
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50240:3000
 
   random-quote-machine:
-    build: ./apps/random-quote-machine
+    build:
+      context: ./apps/random-quote-machine
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50105:3000
 
   request-header-parser-microservice:
-    build: ./apps/request-header-parser-microservice
+    build:
+      context: ./apps/request-header-parser-microservice
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50110:3000
 
   scatterplot-graph:
-    build: ./apps/scatterplot-graph
+    build:
+      context: ./apps/scatterplot-graph
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50115:3000
 
   secure-real-time-multiplayer-game:
-    build: ./apps/secure-real-time-multiplayer-game
+    build:
+      context: ./apps/secure-real-time-multiplayer-game
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50120:3000
 
   stock-price-checker:
-    build: ./apps/stock-price-checker
+    build:
+      context: ./apps/stock-price-checker
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50140:3000
 
   # CACHE_TTL_MINUTES and IEX_API_KEY
   stock-price-checker-proxy:
-    build: ./apps/stock-price-checker-proxy
+    build:
+      context: ./apps/stock-price-checker-proxy
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50130:3000
 
   sudoku-solver:
-    build: ./apps/sudoku-solver
+    build:
+      context: ./apps/sudoku-solver
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50150:3000
 
   survey-form:
-    build: ./apps/survey-form
+    build:
+      context: ./apps/survey-form
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50280:3000
 
   technical-documentation-page:
-    build: ./apps/technical-documentation-page
+    build:
+      context: ./apps/technical-documentation-page
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50250:3000
 
   timestamp-microservice:
-    build: ./apps/timestamp-microservice
+    build:
+      context: ./apps/timestamp-microservice
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50160:3000
 
   treemap-diagram:
-    build: ./apps/treemap-diagram
+    build:
+      context: ./apps/treemap-diagram
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50255:3000
 
   tribute-page:
-    build: ./apps/tribute-page
+    build:
+      context: ./apps/tribute-page
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50270:3000
@@ -218,28 +279,36 @@ services:
   # # TWITCH_CLIENT_ID, TWITCH_CLIENT_SECRET, ACCESS_TOKEN, twitch update script (could run this
   # # as a prestart script, then restart this container every 30 days or so)
   # twitch-proxy:
-  #   build: ./apps/twitch-proxy
+  #   build:
+  #     context: ./apps/twitch-proxy
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50170:3000
 
   # # Database
   # url-shortener-microservice:
-  #   build: ./apps/url-shortener-microservice
+  #   build:
+  #     context: ./apps/url-shortener-microservice
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50180:3000
 
   # # Database
   # voting-app:
-  #   build: ./apps/voting-app
+  #   build:
+  #     context: ./apps/voting-app
+  #     dockerfile: ../../Dockerfile
   #   command: npm start
   #   ports:
   #     - 50185:3000
 
   # OPEN_WEATHER_API_KEY
   weather-proxy:
-    build: ./apps/weather-proxy
+    build:
+      context: ./apps/weather-proxy
+      dockerfile: ../../Dockerfile
     command: npm start
     ports:
       - 50190:3000
