--- a/apps/markdown-previewer/client/.babelrc.json
+++ b/apps/markdown-previewer/client/.babelrc.json
@@ -1,6 +1,6 @@
 {
   "presets": [
-    ["@babel/env", { "targets": "> 0.25%, not dead" }],
+    ["@babel/preset-env", { "targets": "> 0.25%, not dead" }],
     "@babel/preset-react"
   ]
 }
