--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,7 @@
 # Ignore minified libraries
 apps/voting-app/public/*.min.js
 # Ignore bundles
-apps/build-a-pinterest-clone/public/bundle.js
-apps/p2p-video-chat-application/public/bundle.js
+apps/**/public/bundle.js
 # Ignore test runner files?
 apps/**/assertion-analyser.js
 apps/**/test-runner.js
