fix: package.json spacing, pin versions, restore package lock files

--- a/apps/build-a-pinterest-clone/package.json
+++ b/apps/build-a-pinterest-clone/package.json
@@ -34,14 +34,14 @@
     "react-masonry-component": "6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^23.0.4",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.1",
-    "@rollup/plugin-terser": "^0.2.0",
+    "@babel/core": "7.20.5",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-commonjs": "23.0.4",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "5.0.1",
+    "@rollup/plugin-terser": "0.2.0",
     "concurrently": "7.6.0",
     "nodemon": "2.0.22",
     "rollup": "2.79.1"
