--- a/apps/heat-map/package.json
+++ b/apps/heat-map/package.json
@@ -8,7 +8,7 @@
     "test": "wait-port -t 10000 3000"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "dotenv": "16.0.0",
+    "express": "4.17.3"
   }
 }
