--- a/apps/markdown-previewer/package.json
+++ b/apps/markdown-previewer/package.json
@@ -10,18 +10,18 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "dotenv": "16.0.0",
+    "express": "4.17.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^23.0.4",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.1",
-    "@rollup/plugin-terser": "^0.2.0",
-    "rollup": "^2.79.1"
+    "@babel/core": "7.20.5",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-commonjs": "23.0.4",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "5.0.1",
+    "@rollup/plugin-terser": "0.2.0",
+    "rollup": "2.79.1"
   }
 }
