--- a/apps/anonymous-message-board/package.json
+++ b/apps/anonymous-message-board/package.json
@@ -16,7 +16,8 @@
     "express": "4.18.2",
     "helmet": "3.23.3",
     "mocha": "9.2.2",
-    "mongodb": "3.7.3"
+    "mongodb": "3.7.3",
+    "sanitize-html": "^2.8.1"
   },
   "license": "MIT"
 }
