--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   "description": "Example projects for the freeCodeCamp.org curriculum",
   "scripts": {
     "lint": "eslint apps --max-warnings 0",
-    "start": "pm2 start ecosystem.config.js",
-    "reload": "pm2 reload ecosystem.config.js",
-    "restart": "pm2 restart ecosystem.config.js",
-    "stop": "pm2 stop ecosystem.config.js",
-    "delete": "pm2 delete ecosystem.config.js",
-    "update-and-reload-twitch-proxy": "pm2 start scripts/twitch-proxy/updateApiKey.mjs --no-autorestart --cron \"0 0 1 * *\" && npm run reload -- --only twitch-proxy",
+    "build": "docker compose build",
+    "start": "docker compose up -d",
+    "stop": "docker compose down",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
     "test-local-or-ci": "npm-run-all -s test:*",
     "test:config": "jest --rootDir=test",
